--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "veletaled",
+  "name": "pantalla-loteria-la-veleta",
   "description": "Pantalla de Resultados y Botes de Loteria La Veleta Madrid",
   "version": "0.1.0",
   "private": true,
@@ -9,14 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^4.0.0",
-    "core-js": "^3.6.4",
+    "animate.css": "^4.1.1",
+    "core-js": "^3.8.2",
     "hooper": "^0.3.4",
     "numeral": "^2.0.6",
-    "vue": "^2.6.11",
-    "vue-image-effect": "^1.0.0",
+    "vue": "^2.6.12",
     "vue-resource": "^1.5.1",
-    "vuex": "^3.3.0"
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -26,9 +25,9 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   }
 }
